<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.talentuno.mynit.UnansweredSurveyActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/survey_text_unanswered"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textColor="#D93333"
        android:layout_gravity="center_vertical" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent" >
        
        <ImageView 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/less_than"
			android:src="@drawable/less_than" />
        
        <View 
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:layout_width="0dp"
			android:layout_weight="12" />
        
        <ImageView 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/greater_than"
			android:src="@drawable/greater_than" />
        
    </LinearLayout>
    
    <RelativeLayout
        android:layout_weight="10"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/rel" >
        
    </RelativeLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="3"
        android:layout_height="0dp"
        android:layout_width="match_parent" >
        
        <ImageView 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/yes"
			android:src="@drawable/yes"
			android:onClick="yes" />
        
        <ImageView 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/no"
			android:src="@drawable/no"
			android:onClick="no" />
        
        <ImageView 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/maybe"
			android:src="@drawable/may_be" 
			android:onClick="maybe" />
        
    </LinearLayout>
    
</LinearLayout>