<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/survey_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textColor="#D93333"
        android:layout_gravity="center" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent" >
        
        <View 
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="8" />
        
        <ImageView 
            android:id="@+id/survey_enabled"
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/survey_enabled"
			android:src="@drawable/green_enabled"
			android:visibility="gone" />
        
        <ImageView 
            android:id="@+id/survey_disabled"
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/survey_disabled"
			android:src="@drawable/red_disabled"
			android:visibility="gone" />
        
    </LinearLayout>
    
    <RelativeLayout
        android:layout_weight="10"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/rel" >
        
    </RelativeLayout>
    
    <TextView
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/click_share_opinion"
        android:onClick="answerSurvey"
        android:textColor="#0000FF"
        android:layout_gravity="center" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/vote_anonymous"
        android:textColor="#FF0000"
        android:layout_gravity="center" />
    
</LinearLayout>