<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.talentuno.mynit.LoginActivity$PlaceholderFragment"
    android:orientation="vertical" >

    <TextView
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mynit_with_your_number"
        android:textColor="#D93333"
        android:layout_gravity="center" />
    
    <LinearLayout 
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical" >
        
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
            <ImageView
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="2"
            	android:contentDescription="@string/country_code"
            	android:src="@drawable/globe_logo"/>
            
            <EditText
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="15"
            	android:id="@+id/countryCode"
            	android:hint="@string/country_code" />
        
	    </LinearLayout>
	    
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
            <ImageView
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="2"
            	android:contentDescription="@string/phone_number"
            	android:src="@drawable/cell_phone"/>
            
            <EditText
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="15"
            	android:id="@+id/phoneNumber"
            	android:hint="@string/phone_number" />
        
	    </LinearLayout>
	    
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
       	android:layout_weight="1"
        android:contentDescription="@string/country_code"
        android:onClick="confirmNumber"
        android:src="@drawable/start_button"/>

</LinearLayout>